--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "parcel --no-hmr --no-cache --open -p 8080 ./src/index.html",
+    "stealth": "parcel --no-hmr --no-cache  -p 8080 ./src/index.html",
     "prebuild": "rm -rf prod/www/*",
     "build": "parcel build ./src/index.html --public-url ./ -d prod/www/",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -13,7 +14,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/web-animations-js": "^2.2.5",
+    "@types/web-animations-js": "^2.2.6",
     "parcel-bundler": "^1.6.2",
     "typescript": "^2.7.2"
   },
